[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://spritesheet.png" type="Texture" id=2]

[sub_resource type="Curve" id=2]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0.00209644, 171.892 ), 0.0, -494.411, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0223817, 0, 0, Vector2( 1, 0.175676 ), -0.0976658, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 40.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
angular_velocity = 90.0
angular_velocity_random = 0.5
angular_velocity_curve = SubResource( 3 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 10.0
scale = 20.0
scale_curve = SubResource( 6 )
color = Color( 0.847059, 0.988235, 1, 1 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 56.0
height = 200.0

[node name="Player" type="KinematicBody2D" groups=["Net", "Player"]]
script = ExtResource( 1 )

[node name="WaterSplash" type="Particles2D" parent="."]
visible = false
position = Vector2( 1, -112 )
amount = 200
lifetime = 3.0
fixed_fps = 60
local_coords = false
process_material = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 407, 0, 68, 114 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Network_tick_rate" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="Reload_timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Hit_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Shoot_point_left" type="Position2D" parent="."]
position = Vector2( 58, 0 )

[node name="Shoot_point_right" type="Position2D" parent="."]
position = Vector2( -58, 0 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[connection signal="timeout" from="Network_tick_rate" to="." method="_on_Network_tick_rate_timeout"]
[connection signal="timeout" from="Reload_timer" to="." method="_on_Reload_timer_timeout"]
[connection signal="timeout" from="Hit_timer" to="." method="_on_Hit_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
